# pdf2img-c

./: Makefile.am  README.md  configure.ac  pdf2img.desktop.in
doc/: CONTRIBUTORS  ChangeLog  pdf2img.1
img/: pdf2img_c_icon.xpm
po/: Makefile.in.in  en_GB.po
src/: Makefile.am  main.c  my_constants.h
